# vp-python-core

./: .gitignore  Jenkinsfile  README.md  pyproject.toml
.github/workflows/: bump-version.yml
tests/: test_helpers.py  test_hmac.py  test_llm_service.py  test_s3_helper.py  test_sentry.py  test_url_helper.py
vp_core/: __init__.py  check.py  exceptions.py  logging_config.py  py.typed
vp_core/agents/: __init__.py
vp_core/clients/: __init__.py  volopay_be.py
vp_core/helpers/: __init__.py  case_converter.py  markdown_helper.py  parse_json.py  s3_helper.py  timing_decorator.py  url_helper.py
vp_core/kafka/: __init__.py  config.py  consumer.py
vp_core/llm/: gemini_service.py  llm_service.py  openai_service.py
vp_core/logging/: context.py  logger.py  middleware.py
vp_core/security/: __init__.py  guardrails.py  hmac.py
