[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vp-core"
version = "0.1.0"
authors = [
  { name="Hari", email="hari@example.com" },
]
description = "Core utilities for VP projects"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic",
    "fastapi",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=vp_core --cov-report=term-missing"

[tool.setuptools.packages.find]
where = ["."]
include = ["vp_core*"]
