[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vp-python-core"
version = "0.1.0"
authors = [
  { name="Hari", email="hari@example.com" },
]
description = "Core utilities for VP projects"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic",
    "fastapi",
    "sentry-sdk[fastapi]",
    "boto3",
    "httpx[http2]",
    "tenacity",
    "langchain-core",
    "aiokafka",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "pytest-mock",
    "pytest-asyncio",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.poetry]
name = "vp-python-core"
version = "0.1.0"
description = "Core utilities for VP projects"
authors = ["Hari <hari@example.com>"]
readme = "README.md"
packages = [{include = "vp_core"}]

[tool.poetry.dependencies]
python = ">=3.8"
pydantic = "*"
fastapi = "*"
sentry-sdk = {extras = ["fastapi"], version = "*"}
boto3 = "*"
httpx = {extras = ["http2"], version = "*"}
tenacity = "*"
langchain-core = "*"
aiokafka = "*"

[tool.setuptools.packages.find]
where = ["."]
include = ["vp_core*"]
